--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
         </div>
     </header>
     <main class="main">
+        <div class="controls">
+            <div class="controls-img goUp"><img class="controls-item" src="./img/arrowUp.png" alt=""></div>
+            <div class="controls-img goDown"><img class="controls-item" src="./img/arrowDown.png" alt=""></div>
+        </div>
         <div class="first-section fullpage-section">
+            <div class="modal-window">
+                <p>Use scroll or arrow keys to scroll content</p>
+            </div>
             <div class="first-section__content">
                 <div class="first-section__text intersected">
                     <h2 class="first-text first-text-header">Maxim Huk</h2>
